tests/pass/Interface.java
package pass;

public class Super {

}
 

public interface Interf {

}

public class InterfaceTest extends Super implements Interf  {
    int test = 0;
}


